<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="left"
        android:orientation="vertical"
        android:id="@+id/item_list_view_caledar">
        
    	<!-- Esse xml é do item da lista da primeira activity -->
     	<TextView 
    	    android:id="@+id/infoDate4"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
        	android:gravity="center"
        	android:layout_marginLeft="10dp"
       		android:layout_marginRight="10dp"
        	android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="#3a3a3a"
    	    android:text="@string/infoDate"/>
     	
     	<TextView 
    	    android:id="@+id/infoTime4"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
        	android:gravity="center"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"
        	android:textStyle="bold"
            android:textSize="14sp"
    	    android:text="@string/infoTime"/> 
     	
     	<RelativeLayout 
    		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:gravity="left"
        	android:orientation="horizontal"
        	android:id="@+id/item_list_view_caledar2">
        	
    	    <ImageView 
    	        android:id="@+id/apresentacao4"
    	        android:layout_width="40dp"
    	        android:layout_height="40dp"
    	        android:src="@drawable/apresentacao"
    	        android:contentDescription="@string/apresentacao_desc"/>
     	
    		<TextView
    	    	android:id="@+id/infoSession4"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoSession"
            	android:textStyle="normal"
            	android:textSize="12sp"
            	android:layout_marginLeft="50dp"
            	android:layout_centerVertical="true"
            	android:textColor="@android:color/black"/>
    		
    		<ImageView 
    	        android:id="@+id/right_arrow"
    	        android:layout_width="20dp"
    	        android:layout_height="20dp"
    	        android:src="@drawable/petita_right_arrow"
    	        android:layout_alignParentRight="true"
    	        android:layout_centerVertical="true"
    	        android:contentDescription="@string/right_arrow_desc"/>
    	
    	</RelativeLayout>
    	
     	<View
        android:id="@+id/dividerWorkshop"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#e09e3f"
        android:visibility="invisible" />
        
</LinearLayout>