<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- Esse layout é auxiliar de item_list_view_session -->
    <!-- Nesse xml contem o horário e o item da lista -->
	<TextView 
    	    android:id="@+id/infoTime2"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
        	android:gravity="center"
        	android:textStyle="bold"
            android:textSize="14sp"
    	    android:text="@string/infoTime"/>  
     	    	
     	<RelativeLayout 
    		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:gravity="left"
        	android:orientation="horizontal"
        	android:id="@+id/item_list_view_caledar2">
        	
    	    <ImageView 
    	        android:id="@+id/apresentacao2"
    	        android:layout_width="40dp"
    	        android:layout_height="40dp"
    	        android:src="@drawable/documento"
    	        android:contentDescription="@string/documento_desc"/>
     	
    		<TextView
    	    	android:id="@+id/infoSession2"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoSession"
            	android:textStyle="normal"
            	android:textSize="12sp"
            	android:layout_marginLeft="50dp"
            	android:layout_centerVertical="true"
            	android:textColor="@android:color/black"/>
    		
    		<ImageView 
    	        android:id="@+id/right_arrow2"
    	        android:layout_width="20dp"
    	        android:layout_height="20dp"
    	        android:src="@drawable/petita_right_arrow"
    	        android:layout_alignParentRight="true"
    	        android:layout_centerVertical="true"
    	        android:contentDescription="@string/right_arrow_desc"/>
    	
    	</RelativeLayout>
    	
     	<View
        android:id="@+id/dividerSessions2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#42a4cb"
        android:visibility="invisible" />  

</LinearLayout>
